# sparq

./: app.py  pyproject.toml
.github/workflows/: build.yml
docs/: install.md
modules/core/controllers/: routes.py
modules/core/models/: user.py
modules/people/controllers/: __init__.py  employee.py  update.py
system/i18n/: translation.py
tests/: conftest.py
tests/integration/: test_home.py
tests/system/i18n/: test_translation.py
