[project]
name = "sparq"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "flask==3.1.0",
    "flask-login==0.6.3",
    "flask-socketio==5.5.1",
    "flask-sqlalchemy==3.1.1",
    "humanize==4.11.0",
    "idna==3.10",
    "importlib_metadata==8.6.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "pluggy==1.5.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.38",
    "urllib3==2.2.3",
    "werkzeug==3.1.3",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "playwright",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
exclude = ["venv"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
